Arrange some indention

--- a/css/landingpage.html
+++ b/css/landingpage.html
@@ -73,7 +73,14 @@
             </div>
         </section>
         <section id="how-it-works">
-            <video width="700" height="440" controls id="video" src="https://youtu.be/y8Yv4pnO7qc?si=XLTcOLTJCOzk31UF" type="video/mp4"></video>
+            <video 
+                width="700" 
+                height="440" 
+                controls 
+                id="video" 
+                src="https://youtu.be/y8Yv4pnO7qc?si=XLTcOLTJCOzk31UF" 
+                type="video/mp4">
+            </video>
         </section>
         <section id="pricing">
             <div class="cards">
